<resources>
    <string name="app_name">InlumiCol</string>

    <!--LABELS-->
    <string name="lblIngreseFalla">Ingrese los datos sobre la falla</string>
    <string name="lblFoto">Foto:</string>
    <string name="lblUbicacion">Ubicación:</string>
    <string name="lblLogin">Ingresar</string>
    <string name="lblSettings">más</string>
    <string name="lblCheck">Validar</string>

    <string name="lblFinalizarReporte">Finalizar reporte</string>
    <string name="lblNotificado">¿Desea ser notificado?</string>

    <!--HINTS-->
    <string name="hintMunicipio">Municipio</string>
    <string name="hintTipoFalla">Tipo de Falla</string>
    <string name="hintCorreoOptcional">Correo(opcional)</string>

    <!--BUTTONS-->
    <string name="btnFotoDescription">Click para subir una foto</string>
    <string name="btnUbicacionDescription">Click para ingresar una ubicación</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnConfirmar">Confirmar</string>


    <!--MSG TO USER-->




</resources>